--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <title>Mustache</title>
     </head>
     <body>
-        <div class="mustache"></div>
+        <div class="bigote"></div>
+        <div class="ojos"></div>
+        <div class="ojoss"></div>
+        <div class="sombrero"></div>
+        <div class="sombrero1"></div>
     </body>
 </html>
